2015-11-04      3.0013  Fix another bug in the tests which threw up
                          misleading failures if a country-specific subclass
                          was installed

2015-10-26      3.0012  Updated dialing prefixes in N::P::Country
                          from Michael Gray;
                        Fix broken code for is_specialrate in stubs,
                          which previously always returned undef (ie
                          unknown) even when libphonenumber knew it was
                          eg premium rate (bug found by Gerhard Poul's
                          PR 46);
                        +44 3 numbers have is_specialrate set;
                        Fix bug where Number::Phone::Country would get
                          re-set to 'UK' mode instead of the ISO-ly
                          correct 'GB' mode;
                        Data updates.

2015-09-09      3.0011  Data updates

2015-07-20      3.0010  Fix a minor bug in the tests which were throiwing up
                          misleading failures if a country-specific subclass
                          was installed

2015-07-18      3.0009  Data updates;
                        Heard Island has nothing to do with the Marshall Islands!
                        Don't create stub objects when given just a country code
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/40)

2015-06-05      3.0008  Turn on the utf-8 flag on areacode names;
                        Data updates

2015-03-13      3.0007  Mostly just updated data from Google and OFCOM;
                        Announced approximately quarterly release schedule

2014-12-03      3.0006  Updated country codes and access codes for some
                          French overseas departments and ex-Soviet countries;
                        Fix bug confusing Georgia (GE) and South Georgia (GS);

2014-11-25      3.0005  Bugfix for stubs of countries with no national dialing