@@ -145,11 +145,6 @@ foreach my $is (qw(
     no strict 'refs';
     *{__PACKAGE__."::is_$is"} = sub {
         my $self = shift;
-        warn("DEPRECATION: ".__PACKAGE__."->is_$is should only be called as an object method\n")
-          unless(blessed($self));
-        $self = shift if($self eq __PACKAGE__);
-        $self = __PACKAGE__->new($self)
-            unless(blessed($self) && $self->isa(__PACKAGE__));
         if(!exists($cache->{${$self}}->{"is_$is"})) {
           $cache->{${$self}}->{"is_$is"} = 
             grep {
@@ -178,11 +173,6 @@ foreach my $method (qw(operator areacode areaname subscriber)) {
     no strict 'refs';
     *{__PACKAGE__."::$method"} = sub {
         my $self = shift;
-        warn("DEPRECATION: ".__PACKAGE__."->$method should only be called as an object method\n")
-          unless(blessed($self));
-        $self = (blessed($self) && $self->isa(__PACKAGE__)) ?
-            $self :
-            __PACKAGE__->new($self);
         return $cache->{${$self}}->{$method};
     }
 }
@@ -275,11 +265,6 @@ that number is assigned, if available.  Otherwise returns undef.
 
 sub location {
     my $self = shift;
-    warn("DEPRECATION: ".__PACKAGE__."->location should only be called as an object method\n")
-      unless(blessed($self));
-    $self = (blessed($self) && $self->isa(__PACKAGE__)) ?
-        $self :
-        __PACKAGE__->new($self);
 
     return undef unless($self->is_geographic());
 
@@ -321,11 +306,6 @@ for the UK number (0208) 771-2924 it would return +44 20 87712924.
 
 sub format {
     my $self = shift;
-    warn("DEPRECATION: ".__PACKAGE__."->format should only be called as an object method\n")
-      unless(blessed($self));
-    $self = (blessed($self) && $self->isa(__PACKAGE__)) ?
-        $self :
-        __PACKAGE__->new($self);
     return (
 	# if there's an areacode ...
         $self->areacode()      ? ('+'.country_code().' '.$self->areacode().' '.(
