@@ -1,11 +1,5 @@
 package fatalwarnings;
 
-$SIG{__WARN__} = sub {
-  foreach my $warning (@_) {
-    if($warning !~ /^DEPRECATION: Number::Phone.*should only be called as an object method/) {
-      die("warning made fatal: $warning\n");
-    }
-  }
-};
+$SIG{__WARN__} = sub { die("warning made fatal: ".join('', @_)."\n"); };
 
 1;
