@@ -1,3 +1,7 @@
+XXXX-XX-XX      XXXXXX  Deprecated APIs of being able to call most methods as
+                          class methods of functions instead of object methods
+                          deleted
+
 2015-11-04      3.0013  Fix another bug in the tests which threw up
                           misleading failures if a country-specific subclass
                           was installed
